[260109] feat: 검색 필터링 구현

--- a/src/main/resources/templates/pages/booking/payment-success.html
+++ b/src/main/resources/templates/pages/booking/payment-success.html
@@ -11,11 +11,6 @@
     <p><strong>주문 번호</strong>: <span th:text="${orderNumber}"></span></p>
     <p><strong>총 결제 금액</strong>: <span th:text="${amount}"></span>원</p>
 
-    <button class="payment-button" onclick="location.href='/'">확인</button>
-
-    <script>
-        // TODO: 결제 승인 API 호출
-
-    </script>
+    <button onclick="location.href='/'">확인</button>
 </body>
 </html>
