--- a/src/main/resources/templates/pages/booking/booking-window.html
+++ b/src/main/resources/templates/pages/booking/booking-window.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>수업 신청하기 - Booking</title>
+    <title>수업 신청하기</title>
 
     <meta name="_csrf" th:content="${_csrf?.token}" />
     <meta name="_csrf_header" th:content="${_csrf?.headerName}" />
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
 
     <script src="https://js.tosspayments.com/v2/standard"></script>
 
@@ -132,19 +132,7 @@
 </head>
 <body>
 
-<header>
-    <div class="header-logo">
-        <span class="material-icons-outlined menu-icon">menu</span>
-        <a href="/" style="text-decoration: none; color: inherit;">
-            D-trip Edu
-        </a>
-    </div>
-
-    <div class="header-icons">
-        <span class="material-icons-outlined" style="cursor: pointer;" onclick="location.href='/chat'">chat_bubble</span>
-        <span class="material-icons-outlined">person</span>
-    </div>
-</header>
+<header th:replace="~{fragments/header :: header}"></header>
 
 <main class="container">
     <div class="page-title" style="margin-top: 20px;">
@@ -230,6 +218,8 @@
             </div>
         </aside>
     </div>
+
+    <footer th:replace="~{fragments/footer :: footer}"></footer>
 </main>
 
 <script type="text/javascript">
