--- a/src/main/resources/templates/pages/booking/courseHistory.html
+++ b/src/main/resources/templates/pages/booking/courseHistory.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
 
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -204,6 +204,7 @@
             <button class="btn btn-outline" onclick="closeModal()">닫기</button>
         </div>
     </div>
+    <footer th:replace="~{fragments/footer :: footer}"></footer>
 </div>
 
 <script th:inline="javascript">
