--- a/src/main/resources/templates/pages/chat/chat-room.html
+++ b/src/main/resources/templates/pages/chat/chat-room.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>채팅 - D-trip Edu</title>
+    <title>채팅</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
 
     <style>
         /* --- [채팅 전용 스타일] --- */
-        /* style.css의 변수를 활용하여 일관성 유지 */
-
-        /* 1. 채팅방 레이아웃 (헤더 제외 나머지 공간 꽉 채우기) */
         .chat-container {
             /* [핵심] 전체 화면 높이 - 헤더 높이 = 남은 공간 */
             height: calc(100vh - var(--header-height));
