--- a/src/main/resources/templates/pages/schedule/teacher-timetable.html
+++ b/src/main/resources/templates/pages/schedule/teacher-timetable.html
@@ -15,11 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
-        /* [CSS 변수 활용]
-           style.css에 정의된 변수를 가져와서 적용합니다.
-           FullCalendar의 스타일을 덮어쓰기 위해 !important를 적절히 사용합니다.
-        */
-
         /* 메인 컨테이너 */
         .main-container {
             max-width: 1000px;
@@ -150,20 +145,7 @@
 </head>
 <body>
 
-<header>
-    <div class="header-logo">
-        <span class="material-icons-outlined menu-icon">menu</span>
-        <a href="/" style="text-decoration: none; color: inherit;">
-            D-trip Edu
-        </a>
-    </div>
-
-    <div class="header-icons">
-        <span class="material-icons-outlined" onclick="location.href='/chat'">chat_bubble</span>
-        <span class="material-icons-outlined">person</span>
-    </div>
-</header>
-
+<header th:replace="~{fragments/header :: header}"></header>
 <div class="main-container">
     <div class="legend-container">
         <div class="legend-item"><span class="dot dot-pending"></span> 대기</div>
@@ -216,6 +198,7 @@
             </div>
         </div>
     </div>
+    <footer th:replace="~{fragments/footer :: footer}"></footer>
 </div>
 
 <script th:inline="javascript">
