--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/global.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
-        body { background-color: #fff; color: #333; font-family: 'Pretendard', sans-serif; }
+        body { background-color: #fff; color: #333; font-family: 'Pretendard', sans-serif; padding-top: 0;}
 
         /* 헤더 스타일 */
         .navbar { border-bottom: 1px solid #eee; padding: 10px 15px; }
@@ -53,74 +53,61 @@
             margin-top: 40px;
         }
 
-        /* 푸터 스타일 */
-        .footer {
-            padding: 30px 0;
-            font-size: 0.85rem;
-            color: #777;
-            text-align: center;
-            border-top: 1px solid #eee;
-        }
-        .footer-links a { color: #555; text-decoration: none; margin: 0 10px; }
-
         /* 검색창 커스텀 */
         .search-container { margin-top: -25px; position: relative; z-index: 10; padding: 0 15px; }
         .search-input { border-radius: 10px; border: 1px solid #dee2e6; padding: 12px 40px; }
     </style>
 </head>
 <body>
-
-<header th:replace="~{fragments/header :: header}"></header>
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-            <img th:src="@{/images/hamburger.png}" width="30" height="30">
-        </button>
-
+         <a class="navbar-brand" href="#">
+             <img th:src="@{/images/logo.png}" style="height: 40px; width: auto;">
+         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img th:src="@{/images/bell.png}" width="30" height="30"></a>
+                    <a class="nav-link" href="#"><img th:src="@{/images/calender.png}" width="40" height="40" title="시간표"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/chat-room"><img th:src="@{/images/talk.png}" width="30" height="30"></a>
+                    <a class="nav-link" href="/chat-room"><img th:src="@{/images/talk.png}" width="40" height="40" title="채팅"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img th:src="@{/images/profile.png}" width="30" height="30"></a>
+                    <a class="nav-link" href="#"><img th:src="@{/images/profile.png}" width="40" height="40" title="프로필"></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel"><img th:src="@{/images/favicon.png}"></h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">프로필</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">수업 예약 현황</p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">선생님 찾기</p>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">-->
+<!--    <div class="offcanvas-header">-->
+<!--        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">-->
+<!--            <img th:src="@{/images/favicon.png}" class="img-fluid">-->
+<!--        </h5>-->
+<!--        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>-->
+<!--    </div>-->
+<!--    <div class="offcanvas-body">-->
+<!--        <div class="card" style="width: 18rem;">-->
+<!--            <div class="card-body">-->
+<!--                <p class="card-text">프로필</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="card" style="width: 18rem;">-->
+<!--            <div class="card-body">-->
+<!--                <p class="card-text">수업 예약 현황</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="card" style="width: 18rem;">-->
+<!--            <div class="card-body">-->
+<!--                <p class="card-text">선생님 찾기</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div class="hero-banner"><img th:src="@{/images/hero-banner.png}" class="img-fluid"></div>
 
